syntax = "proto3";

option csharp_namespace = "Ordering.API";

package eShopOnContainers;

service OrderingService {
  
  rpc ListOrders (ListOrdersRequest) returns (ListOrdersResponse);
}

message Order {
	string number = 1;
}


message ListOrdersRequest {
  string buyer_id = 1;

  int32 page_size = 2;

  string page_token = 3;

}

message ListOrdersResponse {
  repeated Order orders = 1;

  string next_page_token = 2;

  int32 page_count = 3;
}
